--- a/index.html
+++ b/index.html
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.15.4/css/all.css" />
+    <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
     <header class="header">
-        
+        <div class="header__top">
+            <div class="top__center">
+                <span class="top__icon"><i class="fal fa-film"></i></span>
+                <p class="top__p">See no special offer restrictions</p>
+            </div>
+        </div>
+        <div class="header__nav">
+
+        </div>
     </header>
 </body>
+
 </html>
