--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.15.4/css/all.css" />
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/media.css">
 </head>
 
 <body>
@@ -19,7 +20,18 @@
             </div>
         </div>
         <div class="header__nav">
-
+            <div class="container header__wrap">
+                <a class="logo" href="#">
+                    <img src="./img/logo.png" class="logo__img" alt="">
+                    <span class="logo__p">CINEMAS</span>
+                </a>
+                <ul class="nav__menu">
+                    <li class="menu__list"><a href="#" class="menu__link">Films</a></li>
+                    <li class="menu__list"><a href="#" class="menu__link">Serials</a></li>
+                    <li class="menu__list"><a href="#" class="menu__link">Cartoons</a></li>
+                    <li class="menu__list"><a href="#" class="menu__link">Collections</a></li>
+                </ul>
+            </div>
         </div>
     </header>
 </body>
