--- a/index.html
+++ b/index.html
@@ -99,11 +99,119 @@
         <div class="container">
             <div class="trailer__decs">
                 <img class="trailer__post" src="./img/trailer-logo.png" alt="">
-                <p class="trailer__p">After the events at the Leipzig-Halle airport, Natasha was overtaken by the mistakes of the past. The Red Room again made itself felt - a program to create Widows - professional killers and spies - just like her. Natasha decides once and for all to deal with people whose efforts she herself became a Widow.</p>
+                <p class="trailer__p">After the events at the Leipzig-Halle airport, Natasha was overtaken by the
+                    mistakes of the past. The Red Room again made itself felt - a program to create Widows -
+                    professional killers and spies - just like her. Natasha decides once and for all to deal with people
+                    whose efforts she herself became a Widow.</p>
                 <a href="#" class="btn">Watch now</a>
             </div>
         </div>
     </section>
+    <section class="collections">
+        <div class="container">
+            <div class="title">
+                <h2 class="heading">Collections</h2>
+            </div>
+            <div class="collections__wrap">
+                <div class="collect__card">
+                    <div class="collect__bg"></div>
+                    <img src="./img/lines.png" alt="" class="lines">
+                    <div class="collect__body">
+                        <span class="collect__icon"><i class="fad fa-play"></i></span>
+                        <h4 class="collect__h">All Marvel Films</h4>
+                    </div>
+                </div>
+                <div class="collect__card">
+                    <div class="collect__bg"></div>
+                    <img src="./img/lines.png" alt="" class="lines">
+                    <div class="collect__body">
+                        <span class="collect__icon"><i class="fad fa-play"></i></span>
+                        <h4 class="collect__h">Fast and the Furious</h4>
+                    </div>
+                </div>
+                <div class="collect__card">
+                    <div class="collect__bg"></div>
+                    <img src="./img/lines.png" alt="" class="lines">
+                    <div class="collect__body">
+                        <span class="collect__icon"><i class="fad fa-play"></i></span>
+                        <h4 class="collect__h">Star Wars</h4>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="series">
+        <div class="container">
+            <div class="title">
+                <h5 class="heading">Series</h5>
+            </div>
+            <div class="series__thrones">
+                <div class="thrones__bg"></div>
+                <div class="thrones__content">
+                    <h5 class="thrones__h">Game of Thrones</h5>
+                    <p class="thrones__p">The time of prosperity is drawing to a close, and the summer, which lasted
+                        almost
+                        a decade, is dying away. Around the center of power of the Seven Kingdoms, the Iron Throne, a
+                        conspiracy is ripening, and during this difficult time, the king decides to seek support from
+                        his
+                        youth friend Eddard Stark. In a world where everyone - from the king to the mercenary - is eager
+                        for
+                        power, intrigues and is ready to stick a knife in the back, there is ...</p>
+                    <button class="thrones__btn">Watch now</button>
+                </div>
+            </div>
+            <div class="series__wrap">
+                <div class="series__wanda">
+                    <div class="wanda__bg"></div>
+                    <div class="wanda__content">
+                        <span class="card__icon"><i class="fad fa-play"></i></span>
+                        <p class="wanda__p">Wanda Vision</p>
+                    </div>
+                </div>
+                <div class="series__inner">
+                    <div class="series__card">
+                        <div class="inner__bg"></div>
+                        <div class="inner__content">
+                            <span class="card__icon"><i class="fad fa-play"></i></span>
+                            <p class="inner__p">The Flash</p>
+                        </div>
+                    </div>
+                    <div class="series__card">
+                        <div class="inner__bg"></div>
+                        <div class="inner__content">
+                            <span class="card__icon"><i class="fad fa-play"></i></span>
+                            <p class="inner__p">The Great</p>
+                        </div>
+                    </div>
+                    <div class="series__card">
+                        <div class="inner__bg"></div>
+                        <div class="inner__content">
+                            <span class="card__icon"><i class="fad fa-play"></i></span>
+                            <p class="inner__p">GOTHAM</p>
+                        </div>
+                    </div>
+                    <div class="series__card">
+                        <div class="inner__bg"></div>
+                        <div class="inner__content">
+                            <span class="card__icon"><i class="fad fa-play"></i></span>
+                            <p class="inner__p">The witcher</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__wrap">
+                <div class="footer__brand">
+                    <a href="#"><img src="./img/Page 1.svg" alt=""></a>
+                    <a href="#"><img src="./img/Frame.svg" alt=""></a>
+                </div>
+                <h6 class="footer__h">© PROWEB. В целях обучения 2021</h6>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
